--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -1,7 +1,13 @@
 .container {
     margin: auto;
-    max-width: 500px;
+    max-width: 80%;
     font-family: sans-serif;
+}
+
+.topbar {
+    margin: auto;
+    max-width: 80%;
+    text-align: center;
 }
 
 .heading {
